# django-rest-youtube-integration

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
docs/: celery.md  development-journey.md  django-best-practices.md  django-rest.md  django.md  extra.md  openai.md  task.md  uv.md
youtube/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
youtube/management/commands/: setup_periodic_tasks.py  trigger_populate.py
youtube/migrations/: 0001_initial.py  0002_auto_20250814_1148.py  0003_tasklog.py
youtube/services/: __init__.py  comment_generation_service.py  comment_service.py  content_population_service.py  task_logging_service.py  video_service.py
youtube/tasks/: __init__.py  base_task.py  content_generation_tasks.py  engagement_tasks.py  maintenance_tasks.py
youtube/tests/: __init__.py  test_api_comments.py  test_api_general.py  test_api_videos.py  test_comment_generation.py  test_content_population_service.py  test_exceptions.py  test_services.py  test_task_logging.py  test_tasks.py
youtube/views/: __init__.py  base.py  comment_detail_update_delete.py  comment_like.py  comment_list_create.py  video_detail_update_delete.py  video_increment_views.py  video_like.py  video_list_create.py
youtube_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
